08-advanced-features/istio-canary.yaml
# Service mesh (Istio): canary release - 90% traffic to v1, 10% to v2, no app changes.
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata: {name: shop}
spec:
  host: shop
  subsets:
    - {name: v1, labels: {version: v1}}
    - {name: v2, labels: {version: v2}}
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata: {name: shop}
spec:
  hosts: [shop]
  http:
    - route:
        - {destination: {host: shop, subset: v1}, weight: 90}
        - {destination: {host: shop, subset: v2}, weight: 10}
